viimeisin viesti -otsikko ohjeiden mukaan

--- a/TikapeVanhainkoti/src/main/resources/templates/index.html
+++ b/TikapeVanhainkoti/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
                     <strong>Viestejä</strong>
                 </div>
                 <div class="col-sm-4">
-                    <strong>Päivämäärä</strong>
+                    <strong>Viimeisin viesti</strong>
                 </div>
             </div>
 
