--- a/TikapeVanhainkoti/src/main/resources/templates/alue.html
+++ b/TikapeVanhainkoti/src/main/resources/templates/alue.html
@@ -48,7 +48,7 @@
                     <strong>Viestejä</strong>
                 </div>
                 <div class="col-sm-4">
-                    <strong>Päivämäärä</strong>
+                    <strong>Viimeisin viesti</strong>
                 </div>
             </div>
 
