--- a/TikapeVanhainkoti/src/main/resources/templates/index.html
+++ b/TikapeVanhainkoti/src/main/resources/templates/index.html
@@ -44,6 +44,7 @@
                 </div>
                 <div class="col-sm-4" th:style="${iterStat.even}? 'background-color:lavender;'">
                     <span th:text="${alue.pvm}" th:if="${alue.lkm}>0">Pvm</span>
+                    <span th:if="0>=${alue.lkm}">&nbsp;</span>
                 </div>
             </div>
 
