--- a/TikapeVanhainkoti/src/main/resources/templates/ketju.html
+++ b/TikapeVanhainkoti/src/main/resources/templates/ketju.html
@@ -3,8 +3,7 @@
 
     <head>
 
-        <!--<th:title="Vanhainkoti: ${ketju.animi}">animi</title>-->
-        <title>Vanhainkoti</title>
+        <title th:text="'Vanhainkoti: ' + ${ketju.nimi} + ' (' + ${ketju.animi} + ')'">animi</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     </head>
