--- a/TikapeVanhainkoti/src/main/resources/templates/ketju.html
+++ b/TikapeVanhainkoti/src/main/resources/templates/ketju.html
@@ -31,8 +31,8 @@
                 <div class="col-xs-8">
                 </div>
                 <div class="col-xs-2">
-                    <ul class="pagination">
-                        <li th:class="${i==sivunro}? 'active'" th:each="i : ${sivunumerot}"><a th:href="@{~/ketju/{kid}/{sivunro}(kid=${ketju.id}, sivunro=${i})}"><span th:text="${i}">0</span></a></li>
+                    <ul class="pagination" th:each="i : ${sivunumerot}">
+                        <li th:class="${i==sivu}? 'active'" ><a th:href="@{~/ketju/{kid}/{sivunro}(kid=${ketju.id}, sivunro=${i})}"><span th:text="${i}">0</span></a></li>
                     </ul>
                 </div>
                 <div class="col-xs-1">
@@ -80,8 +80,8 @@
                 <div class="col-xs-8">
                 </div>
                 <div class="col-xs-2">
-                    <ul class="pagination">
-                        <li th:each="i : ${sivunumerot}" th:class="${i==sivunro}? 'active'"><a th:href="@{~/ketju/{kid}/{sivunro}(kid=${ketju.id}, sivunro=${i})}"><span th:text="${i}">0</span></a></li>
+                    <ul class="pagination" th:each="i : ${sivunumerot}">
+                        <li th:class="${i==sivu}? 'active'" ><a th:href="@{~/ketju/{kid}/{sivunro}(kid=${ketju.id}, sivunro=${i})}"><span th:text="${i}">0</span></a></li>
                     </ul>
                 </div>
                 <div class="col-xs-1">
