--- a/TikapeVanhainkoti/src/main/resources/templates/alue.html
+++ b/TikapeVanhainkoti/src/main/resources/templates/alue.html
@@ -28,8 +28,8 @@
                 <div class="col-xs-8">
                 </div>
                 <div class="col-xs-2">
-                    <ul class="pagination" th:each="i : ${sivunumerot}">
-                        <li th:class="${i==sivu}? 'active'"><a th:href="@{~/alue/{aid}/{sivunro}(aid=${alue.id}, sivunro=${i})}"><span th:text="${i}">0</span></a></li>
+                    <ul class="pagination">
+                        <li th:each="i, iC : ${sivunumerot}" th:class="${(iC.index + 1)==sivu}? 'active'"><a th:href="@{~/alue/{aid}/{sivunro}(aid=${alue.id}, sivunro=${i})}"><span th:text="${i}">0</span></a></li>
                     </ul>
                 </div>
 
@@ -80,8 +80,8 @@
                 <div class="col-xs-8">
                 </div>
                 <div class="col-xs-2">
-                    <ul class="pagination" th:each="i : ${sivunumerot}">
-                        <li th:class="${i==sivu}? 'active'"><a th:href="@{~/alue/{aid}/{sivunro}(aid=${alue.id}, sivunro=${i})}"><span th:text="${i}">0</span></a></li>
+                    <ul class="pagination">
+                        <li th:each="i, iC : ${sivunumerot}" th:class="${(iC.index + 1)==sivu}? 'active'"><a th:href="@{~/alue/{aid}/{sivunro}(aid=${alue.id}, sivunro=${i})}"><span th:text="${i}">0</span></a></li>
                     </ul>
                 </div>
 
